[package]
name = "port_morph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
